--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,5 +1,8 @@
-/*place global styles here */
-html,
-body {
-	@apply h-full;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@tailwind variants;
+
+html, body {
+    font-family: 'Space Grotesk', sans-serif;
 }
